--- a/frontend/src/pages/SearchPage.css
+++ b/frontend/src/pages/SearchPage.css
@@ -6,23 +6,32 @@
 
 .searchbar {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  /* column-gap: 8px; */
+  row-gap: 8px;
+}
+
+.searchbar-index {
+  display: flex;
+  flex-direction: row;
   column-gap: 8px;
 }
 
-.results-container {
+.searchbar-button {
   display: flex;
-  flex-direction: column;
-  padding-left: 25%;
-  padding-right: 25%;
+  flex-direction: row;
+  column-gap: 8px;
 }
 
-.results-title {
+.loadingbar {
   display: flex;
   flex-direction: column;
-  /* background-color: bisque; */
-  align-items: flex-start;
-  font-size: large;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  padding-left: 25%;
+  padding-right: 25%;
+  padding-top: 10%;
 }
